basic KPI adding, lots of React setup
Split the app into 4 components:

* `KpiApp` - wraps everything up and owns the state
    * `KpiList` - displays many `KpiItem`s
        * `KpiItem` - one KPI
    * `KpiForm` - adding a new KPI

At this point it's basically just a TODO app, need to flesh out a lot.

A few initial observations about React:

* it didn't like `<kpiList />` but was happy with `<KpiList />`; since
  those are supposed to be based on js variables names, I'm not sure
  what's going on
* I miss angularjs' dependency injector
* the jsx syntax is weird, but js2-mode seems to handle it ok
* Kinda feels like the opposite of angularjs views; in angular you're
  decorating the HTML with a bunch of javascript, in react you're
  decorating javascript with a bunch of HTML
* it feels more stateless than an angular directive/template/controller,
  since there's a "let's run it again from the top" mentality, but I'm
  still managing some state for each component;
  `this.setState({foo:true})` vs `$scope.foo = true` isn't really that
  different
* feels conceptually simpler than angularjs; if I call a function that
  changes my state, I'll re-render. Pretty basic compared to
  `$scope.$digest` et al, at the expense of some more manual state
  management
* has some auto `bind`ing magic in there to elide the need to
  `.bind(this)` in some spots, which is really nice
* I don't see what it has to do with reactive programming; this just
  seems like another implementation of how to rig up events/views/etc;
  just a different flavor than angular/backbone/jquery. I think Flux is
  the reactive part
* a React class seems more succinct than an angular
  directive/template/controller, but I'm nervous about large JSX
  templates; I guess I'll find out when I start adding bootstrap DOM/CSS
* unit test might be hard; looks like the test addon is all about
  simulating clicks and user events

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   </head>
   <body>
-    <p>TEST</p>
+    <div id="content">Loading...</div>
     <script src="bundle.js"></script>
     <script src="http://localhost:9091"></script>
   </body>
